feat: add functionality of getting tasks by user ID
- Implemented GetTasksByUserID method in handlers and services
- Updated models and repositories to support tasks and users links
- Updated OpenAPI specification for new endpoint of recieving tasks by user ID
