# openapi/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: API
   version: 1.0.0
@@ -52,7 +52,7 @@ paths:
           description: The ID of the task to get
           schema:
             type: integer
-            format: uint
+            format: int64
       
       responses:
         '200':
@@ -78,7 +78,7 @@ paths:
           description: The ID of the task to update
           schema:
             type: integer
-            format: uint
+            format: int64
       requestBody:
         description: The fields to partially update
         required: true
@@ -117,7 +117,7 @@ paths:
           description: The ID of the task to delete
           schema:
             type: integer
-            format: uint
+            format: int64
 
       responses:
         '204':
@@ -174,7 +174,7 @@ paths:
           description: The ID of the user to get
           schema:
             type: integer
-            format: uint
+            format: int64
 
       responses:
         '200':
@@ -199,7 +199,7 @@ paths:
           description: The ID of the user to update
           schema:
             type: integer
-            format: uint
+            format: int64
       requestBody:
         description: The fields to partially update
         required: true
@@ -237,11 +237,38 @@ paths:
           description: The ID of the User to delete
           schema:
             type: integer
-            format: uint
-
+            format: int64
       responses:
         '204':
           description: User deleted
+        '404':
+          description: User not found
+        '400':
+          description: Bad request
+
+  /users/{id}/tasks:
+    get:
+      operationId: getTasksByUserID
+      summary: Get all tasks by user ID
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: The ID of the user to get tasks
+      responses:
+        '200':
+          description: A list of User's tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
         '404':
           description: User not found
         '400':
@@ -254,20 +281,29 @@ components:
       properties:
         id:
           type: integer
-          format: uint
+          format: int64
         task:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: int64
+         # readOnly: true
+
 
     User:
       type: object
       properties:
         id:
           type: integer
-          format: uint
+          format: int64
         email:
           type: string
         password:
           type: string
+        tasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/Task'  
 
